[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeus-ml"
description = "A framework for deep learning energy measurement and optimization."
readme = "README.md"
authors = [
    {name = "Jae-Won Chung", email = "jwnchung@umich.edu"},
]
license = {text = "Apache 2.0"}
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["deep-learning", "power", "energy", "sustainability", "mlsys"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "nvidia-ml-py",
    "pydantic",
    "rich",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/SymbioticLab/Zeus"
Homepage = "https://ml.energy/zeus"
Documentation = "https://ml.energy/zeus"

[project.optional-dependencies]
lint = ["ruff", "black==22.6.0"]
test = ["pytest==7.3.2", "pytest-mock==3.10.0", "pytest-xdist==3.3.1"]
torch = ["torch==2.0.1"]
dev = ["ruff", "black==22.6.0", "pytest==7.3.2", "pytest-mock==3.10.0", "pytest-xdist==3.3.1", "torch==2.0.1"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "zeus.__version__"}

# Ruff
[tool.ruff]
select = [
  "E",   # pycodestyle error
  "F",   # pyflakes
  "D",   # pydocstyle
  "PL",  # pylint
  "N",   # pep8-naming
  "B",   # flake8-bugbear (detects likely bugs)
  "G",   # flake8-logging-format (complains about logging)
  "SIM", # flake8-simplify (suggests code simplifications)
]
ignore = [
  "PLW0603",  # Global statement
  "B019",     # Usage of functools.lru_cache
  "PLR0913",  # Too many function arguments
  "PLR0912",  # Too many branches
  "B905",     # zip strict argument
  "PLR0915",  # Too many statements
  "PLR2004",  # Magic values
  "SIM115",   # Context manager for opening files
  "E501",     # Line too long
]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
addopts = "--numprocesses auto"
