[package]
name = "zeusd"
version = "0.1.1"
authors = ["Jae-Won Chung <jwnchung@umich.edu>"]
description = "Zeus daemon"
license = "Apache-2.0"
homepage = "https://ml.energy/zeus"
repository = "https://github.com/ml-energy/zeus"
edition = "2021"

[lib]
name = "zeusd"
path = "src/lib.rs"
doctest = false

[[bin]]
path = "src/main.rs"
name = "zeusd"

[dependencies]
nvml-wrapper = "0.10"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
thiserror = "1"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7.10"
nix = { version = "0.29", default-features = false, features = ["user"] }
paste = "1"
once_cell = "1.7.2"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde_json = "1"
